[package]
name = "axum_mvp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.4.12"
serde = {version = "1.0.137",features = ["derive"]}
serde_json = "1.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"